--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "yasszxd.github.io"
+baseURL = "https://yasszxd.github.io"
 title   = "You did it! You found my website."
 languageCode = "en-us"
 theme = "hello-friend-ng"
@@ -200,7 +200,7 @@ disableHugoGeneratorInject = false
 
 [menu]
   [[menu.main]]
-    identifier = "resume/about"
+    identifier = "about"
     name       = "About"
     url        = "about/"
   [[menu.main]]
